# Linear_Regression

./: README.md  prediction.py  pyproject.toml  training.py
